# py-surepetcare

./: .coveragerc  .devcontainer.json  .gitignore  .pre-commit-config.yaml  README.md  Untitled-1.ipynb  contribution.py  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-jupyter.txt  requirements.txt  setup.sh  testing.ipynb
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bump-package-version.yml  bump-tag-version.yml  bump-version.yml  codeql-analysis.yml  pre-commit.yaml  publish-pypi.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  release-drafter.yml  release.yml  tag-version-after-merge.yml  test-and-coverage.yml  workflow-test.yml
contribute/: contribution.py
scripts/: release.py
surepcci/: __init__.py  account.py  context.py  devices.py  pet.py
surepccli/: README.md  __init__.py  __main__.py  account.py  context.py  device.py  helpers.py  pet.py  session.py  typer.py
surepccli/devices/: dual_scan_connect.py  dual_scan_pet_door.py  feeder_connect.py  helper.py  hub.py  pet_door.py
surepcio/: __init__.py  client.py  command.py  enums.py  household.py
surepetcare/: client.py  client_headers.py  const.py  household.py
surepy/: client.py  const.py  enums.py  helper.py
tests/: __init__.py  conftest.py  mock_helpers.py  test_auth.py  test_client.py  test_const.py  test_devices.py  test_entities.py  test_enums.py  test_helper.py  test_household.py  test_pet.py  test_redact.py
(+124 files in other folders)
