[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-surepetcare"
version = "0.1.0"
description = "Python library for SurePetcare API"
authors = [
    { name = "FredrikM97" }
]
readme = ""
requires-python = ">=3.8"

dependencies = [
    "aiohttp>=3.12.0"
]

[tool.setuptools.packages.find]
include = ["surepetcare*"]